// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > should do nothing on click when disabled 1`] = `
<DocumentFragment>
  <span>
    <span>
      <a
        class="relative space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-secondary-text cursor-not-allowed ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="https://app.arkvault.io/"
        rel="noopener noreferrer"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200"
        >
          app.arkvault.io
        </span>
        <div
          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
          data-testid="Link__external"
        >
          <div
            style="height: 12px; width: 12px;"
          >
            <svg
              id="arrow-external"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </a>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Link > should open an external link 1`] = `
<DocumentFragment>
  <span>
    <span>
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="https://app.arkvault.io/"
        rel="noopener noreferrer"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        />
        <div
          class="mb-[3px] shrink-0 align-middle duration-200"
          data-testid="Link__external"
        >
          <div
            style="height: 12px; width: 12px;"
          >
            <svg
              id="arrow-external"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </a>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Link > should render 1`] = `
<DocumentFragment>
  <span>
    <span>
      <a
        class="ring-focus group/inner relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
        data-discover="true"
        data-ring-focus-margin="-m-1"
        data-testid="RouterLink"
        href="/test"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 hover:border-current"
        >
          Test
        </span>
      </a>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Link > should render external without children 1`] = `
<DocumentFragment>
  <span>
    <span>
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="https://app.arkvault.io"
        rel="noopener noreferrer"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        />
        <div
          class="mb-[3px] shrink-0 align-middle duration-200"
          data-testid="Link__external"
        >
          <div
            style="height: 12px; width: 12px;"
          >
            <svg
              id="arrow-external"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </a>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Link > should render with tooltip 1`] = `
<DocumentFragment>
  <span>
    <span
      aria-describedby="«re»"
    >
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="/test"
        rel="noopener noreferrer"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        >
          Test
        </span>
        <div
          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
          data-testid="Link__external"
        >
          <div
            style="height: 12px; width: 12px;"
          >
            <svg
              id="arrow-external"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </a>
    </span>
    <div
      data-floating-ui-focusable=""
      id="«re»"
      role="tooltip"
      style="position: absolute; left: 0px; top: 0px; z-index: 50; transform: translate(0px, -12px);"
      tabindex="-1"
    >
      <div
        style="transition-property: opacity,transform; transition-duration: 250ms;"
      >
        <svg
          aria-hidden="true"
          class="fill-theme-secondary-900 dark:fill-theme-secondary-700 dim:fill-theme-dim-700"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%; left: 0px;"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
            stroke="none"
          />
          <clippath
            id="«rg»"
          >
            <rect
              height="14"
              width="14"
              x="0"
              y="0"
            />
          </clippath>
        </svg>
        <div
          class="overflow-wrap-anywhere dark:bg-theme-secondary-700 dark:text-theme-secondary-200 bg-theme-secondary-900 dim:text-theme-dim-50 dim:bg-theme-dim-700 max-w-[600px] rounded-md px-2 py-1 text-sm font-semibold break-words whitespace-nowrap text-white"
          style="font-feature-settings: "liga" off, "calt" off;"
        >
          <div>
            Custom Tooltip
          </div>
        </div>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Link > should show a toast when trying to open an invalid external link 1`] = `
<DocumentFragment>
  <span>
    <span>
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="invalid-url"
        rel="noopener noreferrer"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        />
        <div
          class="mb-[3px] shrink-0 align-middle duration-200"
          data-testid="Link__external"
        >
          <div
            style="height: 12px; width: 12px;"
          >
            <svg
              id="arrow-external"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </a>
    </span>
  </span>
</DocumentFragment>
`;
